Avoid virtual function errors with Java 8 and Groovy.