@@ -1,5 +1,5 @@
 #!/usr/bin/env bash
-JAVA_OPTS="-d64 -Xmx2G"
+JAVA_OPTS="-d64 -Xmx2G -Xverify:none"
 export JAVA_OPTS
 #optional set R_LIBS location
 #R_LIBS=""
